Letra de la cancion con movimiento

--- a/ReproductorMP3/app/src/main/res/values/strings.xml
+++ b/ReproductorMP3/app/src/main/res/values/strings.xml
@@ -2,5 +2,7 @@
     <string name="app_name">Reproductor MP3</string>
     <string name="font_awesome_play">&#xf04b;</string>
     <string name="font_awesome_stop">&#xf04c;</string>
+    <string name="font_awesome_next">&#xf051;</string>
+    <string name="font_awesome_previous">&#xf048;</string>
 
 </resources>
